Implemented preferential attachment and AoA correlation functions

--- a/src/Phase_2.ipynb
+++ b/src/Phase_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pickle"
+    "import pickle\n",
+    "from scipy.stats import pearsonr"
    ]
   },
   {
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 190,
    "metadata": {
     "scrolled": false
    },
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,28 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "489"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# intersection between two sets -- what they have in common\n",
-    "len(set(free_assoc) & set(lancaster_layer))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +101,7 @@
        "529"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,28 +207,38 @@
     "    '''\n",
     "    \n",
     "    # create a random batch of nodes\n",
-    "    batch = np.random.choice(vocab, batch_size, p=weights)\n",
+    "    batch = np.random.choice(vocab, batch_size,replace=False,p=weights)\n",
     "    \n",
     "    # create a list of tuples (node, edge) for each edge a node has\n",
     "    list_conns = get_node_connections(G, batch)\n",
     "    \n",
     "    node_avgs_list = []\n",
     "    for arr in list_conns:\n",
-    "\n",
+    "        # compute preferential attachment on batch nodes\n",
     "        preds = nx.preferential_attachment(aggregate, arr)\n",
+    "        \n",
+    "        # get the average of all the attachments for each node\n",
     "        node_avgs = np.mean([p for u,v,p in preds])\n",
     "        node_avgs_list.append(node_avgs)\n",
     "    \n",
+    "    # list with averages preferential attachment scorer for each node in batch\n",
     "    zip_lists = list(zip(batch, node_avgs_list))\n",
-    "    \n",
-    "    print(zip_lists) # list with averages preferential attachment scorer for each node in batch\n",
-    "    \n",
-    "    return batch_avg, batch"
+    "\n",
+    "    return zip_lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalized_weights = normalize_weights(aggregate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
    "metadata": {
     "scrolled": true
    },
@@ -257,74 +247,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('daddy', 1864.0), ('street', 554.0), ('now', 2864.0), ('cold', 1497.0), ('walk', 1152.0), ('bus', 2985.0), ('hair', 1505.0), ('time', 1781.0), ('sing', 991.0), ('tiger', 3344.0), ('nice', 1647.0), ('dress', 3162.0), ('horse', 4015.0), ('couch', 3190.0), ('truck', 2794.0), ('potty', 1417.0), ('little', 2475.0), ('penguin', 3331.0), ('buy', 1400.0), ('kiss', 412.0)]\n",
-      "\n",
-      "batch average:  2119.0\n"
+      "[('bathroom', 323.0), ('cold', 1497.0), ('black', 1619.0), ('when', 2616.0), ('bear', 4084.0), ('shirt', 2054.0), ('corn', 1519.0), ('telephone', 1776.0), ('you', 7059.0), ('tissue', 157.0), ('bite', 2128.0), ('say', 3030.0), ('bring', 1827.0), ('butterfly', 3142.0), ('pajamas', 1004.0), ('coat', 2469.0), ('big', 2954.0), ('hose', 2685.0), ('banana', 3554.0), ('pants', 3294.0)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2119.0,\n",
-       " array(['daddy', 'street', 'now', 'cold', 'walk', 'bus', 'hair', 'time',\n",
-       "        'sing', 'tiger', 'nice', 'dress', 'horse', 'couch', 'truck',\n",
-       "        'potty', 'little', 'penguin', 'buy', 'kiss'], dtype='<U12'))"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "preferential_attachment(aggregate, vocab, normalized_weights, 20)"
+    "res = preferential_attachment(aggregate, vocab, normalized_weights, 20)\n",
+    "res"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('toothbrush', 46.0), ('broken', 105.0), ('farm', 742.0), ('ouch', 171.0), ('jello', 147.0), ('full', 435.0), ('pour', 520.0), ('hand', 1524.0), ('sink', 1716.0), ('sidewalk', 75.0), ('why', 2781.0), ('long', 1317.0), ('banana', 3554.0), ('tractor', 3526.0), ('face', 857.0), ('snow', 548.0), ('now', 2864.0), ('build', 1039.0), ('tooth', 243.0), ('high', 409.0)]\n",
-      "\n",
-      "batch average:  1130.95\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1130.95,\n",
-       " array(['toothbrush', 'broken', 'farm', 'ouch', 'jello', 'full', 'pour',\n",
-       "        'hand', 'sink', 'sidewalk', 'why', 'long', 'banana', 'tractor',\n",
-       "        'face', 'snow', 'now', 'build', 'tooth', 'high'], dtype='<U12'))"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "preferential_attachment(aggregate, vocab, None, 20)"
+    "### Correlation between batch and AoA dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create dataframe for batch --> (node, score)\n",
+    "df = pd.DataFrame(data=res, columns=['word', 'preferential attachment score'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create dataframe for aoa dataset --> (word, age_avg)\n",
+    "aoa = pd.read_excel('../data/AoA_ratings.xlsx')\n",
+    "aoa.drop(aoa.columns[[1, 2, 3, 5, 6]], axis = 1, inplace = True) # we are only interested in the mean column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A note on the Pearson correlation\n",
+    "The Pearson correlation varies between -1 and +1 with 0 implying no correlation. Correlations of -1 or +1 imply an exact linear relationship. Positive correlations imply that as x increases, so does y. Negative correlations imply that as x increases, y decreases.\n",
+    "The p-value roughly indicates the probability of an uncorrelated system producing datasets that have a Pearson correlation at least as extreme as the one computed from these datasets.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def AoA_correlation(aoa, df):\n",
+    "    \n",
+    "    # get list of batch words\n",
+    "    res_words = [word[0] for word in res]   \n",
+    "    \n",
+    "    # reduce the aoa dataframe to the \n",
+    "    # rows that match our batch\n",
+    "    for index, row in aoa.iterrows():\n",
+    "        if row['Word'] not in res_words:\n",
+    "            aoa.drop(index, inplace=True)\n",
+    "            \n",
+    "    # rearrage the df dataframe in ascending order \n",
+    "    # (the aoa dataframe is already sorted)\n",
+    "    df.sort_values([\"word\"], ascending = (True), inplace=True)\n",
+    "    \n",
+    "    # if the two sets are not the same, it means that the aoa \n",
+    "    # dataset doesn't have some words tha the vocab has\n",
+    "    if len(aoa) != len(df): \n",
+    "        print(\"The lists are not the same\")\n",
+    "        \n",
+    "        # get the data into lists\n",
+    "        df_scores = df['word'].to_list()\n",
+    "        aoa_scores = aoa['Word'].to_list()\n",
+    "        \n",
+    "        # intersection of the two sets\n",
+    "        valid_words = list(set(df_scores) & set(aoa_scores)) \n",
+    "\n",
+    "        # remove the words that are not found \n",
+    "        # in the aoa from the df\n",
+    "        for index, row in df.iterrows(): \n",
+    "            print(row['word'])\n",
+    "            if row['word'] not in valid_words:\n",
+    "                df.drop(index, inplace=True)\n",
+    "        \n",
+    "    # the sets are now the same and we can\n",
+    "    # correlate them\n",
+    "    df_scores = df['preferential attachment score'].to_list()\n",
+    "    aoa_scores = aoa['Rating.Mean'].to_list()\n",
+    "    correlation, p_value = pearsonr(df_scores, aoa_scores)# returns the correlation score and the \n",
+    "\n",
+    "    return correlation \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.009889372320787737"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr = AoA_correlation(aoa, df)\n",
+    "corr"
+   ]
   },
   {
    "cell_type": "code",
