--- a/src/Phase_2.ipynb
+++ b/src/Phase_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 241,
    "metadata": {
     "scrolled": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
     "# lancaster_layer - it introduces new nodes \n",
-    "lists = [ co_oc, phon_conn, free_assoc, feat_norms, word_emb_layer, visual_layer]"
+    "lists = [ co_oc, phon_conn, free_assoc, feat_norms, word_emb_layer, visual_layer, lancaster_layer]"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "529"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,13 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "529\n",
       "529\n",
       "529\n",
       "529\n",
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,17 +239,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 254,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('bathroom', 323.0), ('cold', 1497.0), ('black', 1619.0), ('when', 2616.0), ('bear', 4084.0), ('shirt', 2054.0), ('corn', 1519.0), ('telephone', 1776.0), ('you', 7059.0), ('tissue', 157.0), ('bite', 2128.0), ('say', 3030.0), ('bring', 1827.0), ('butterfly', 3142.0), ('pajamas', 1004.0), ('coat', 2469.0), ('big', 2954.0), ('hose', 2685.0), ('banana', 3554.0), ('pants', 3294.0)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('bug', 7888.0),\n",
+       " ('animal', 6202.0),\n",
+       " ('a', 14494.0),\n",
+       " ('comb', 5284.0),\n",
+       " ('box', 7605.0),\n",
+       " ('little', 8605.0),\n",
+       " ('before', 5403.0),\n",
+       " ('downtown', 6505.0),\n",
+       " ('all', 12796.0),\n",
+       " ('throw', 1996.0),\n",
+       " ('mailman', 9756.0),\n",
+       " ('finish', 9705.0),\n",
+       " ('spill', 5012.0),\n",
+       " ('airplane', 12941.0),\n",
+       " ('red', 2553.0),\n",
+       " ('ant', 5141.0),\n",
+       " ('egg', 2597.0),\n",
+       " ('where', 10883.0),\n",
+       " ('what', 9440.0),\n",
+       " ('please', 5850.0)]"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -265,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,16 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.009889372320787737"
+       "-0.08957911265388938"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
