--- a/src/Phase_2_nonrandom-drk.ipynb
+++ b/src/Phase_2_nonrandom-drk.ipynb
@@ -1180,501 +1180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ag = construct_graph_from_vocab(agg_words, lists)\n",
-    "degree_dict = {}\n",
-    "for node in ag.nodes:\n",
-    "    degree_dict[node] = ag.degree(node)\n",
-    "# print(ag.nodes)\n",
-    "# ag.degree('yes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'yes': 5,\n",
-       " 'water': 15,\n",
-       " 'wet': 2,\n",
-       " 'spoon': 32,\n",
-       " 'mommy': 27,\n",
-       " 'nap': 2,\n",
-       " 'fork': 32,\n",
-       " 'ice': 1,\n",
-       " 'cheese': 71,\n",
-       " 'chocolate': 74,\n",
-       " 'sleep': 28,\n",
-       " 'daddy': 11,\n",
-       " 'butter': 16,\n",
-       " 'hot': 2,\n",
-       " 'me': 32,\n",
-       " 'you': 52,\n",
-       " 'balloon': 111,\n",
-       " 'blue': 98,\n",
-       " 'why': 44,\n",
-       " 'sun': 124,\n",
-       " 'asleep': 3,\n",
-       " 'think': 39,\n",
-       " 'swim': 8,\n",
-       " 'cat': 110,\n",
-       " 'turtle': 83,\n",
-       " 'do': 42,\n",
-       " 'red': 5,\n",
-       " 'animal': 28,\n",
-       " 'dark': 10,\n",
-       " 'potato': 12,\n",
-       " 'bread': 11,\n",
-       " 'alligator': 6,\n",
-       " 'candy': 15,\n",
-       " 'pizza': 4,\n",
-       " 'toast': 10,\n",
-       " 'kitty': 11,\n",
-       " 'snack': 20,\n",
-       " 'morning': 10,\n",
-       " 'jelly': 14,\n",
-       " 'sky': 36,\n",
-       " 'awake': 9,\n",
-       " 'get': 69,\n",
-       " 'sauce': 12,\n",
-       " 'vanilla': 2,\n",
-       " 'like': 51,\n",
-       " 'go': 67,\n",
-       " 'run': 7,\n",
-       " 'pumpkin': 2,\n",
-       " 'away': 45,\n",
-       " 'cake': 47,\n",
-       " 'night': 35,\n",
-       " 'money': 4,\n",
-       " 'where': 58,\n",
-       " 'stop': 7,\n",
-       " 'green': 42,\n",
-       " 'white': 29,\n",
-       " 'time': 61,\n",
-       " 'sit': 6,\n",
-       " 'sandwich': 10,\n",
-       " 'back': 39,\n",
-       " 'break': 29,\n",
-       " 'owl': 7,\n",
-       " 'pudding': 6,\n",
-       " 'here': 64,\n",
-       " 'dog': 78,\n",
-       " 'soup': 9,\n",
-       " 'brown': 3,\n",
-       " 'baby': 9,\n",
-       " 'fall': 9,\n",
-       " 'last': 48,\n",
-       " 'open': 4,\n",
-       " 'try': 28,\n",
-       " 'cookie': 9,\n",
-       " 'long': 16,\n",
-       " 'country': 10,\n",
-       " 'down': 27,\n",
-       " 'dish': 1,\n",
-       " 'breakfast': 13,\n",
-       " 'black': 92,\n",
-       " 'give': 40,\n",
-       " 'yellow': 93,\n",
-       " 'duck': 25,\n",
-       " 'walk': 2,\n",
-       " 'meat': 13,\n",
-       " 'need': 48,\n",
-       " 'cold': 5,\n",
-       " 'dinner': 2,\n",
-       " 'goose': 9,\n",
-       " 'light': 98,\n",
-       " 'find': 50,\n",
-       " 'milk': 26,\n",
-       " 'help': 60,\n",
-       " 'she': 33,\n",
-       " 'hamburger': 16,\n",
-       " 'push': 7,\n",
-       " 'juice': 4,\n",
-       " 'love': 31,\n",
-       " 'pull': 9,\n",
-       " 'tree': 82,\n",
-       " 'he': 48,\n",
-       " 'horse': 93,\n",
-       " 'star': 26,\n",
-       " 'hat': 38,\n",
-       " 'soda': 10,\n",
-       " 'frog': 43,\n",
-       " 'lamb': 11,\n",
-       " 'coke': 3,\n",
-       " 'build': 6,\n",
-       " 'who': 10,\n",
-       " 'snow': 17,\n",
-       " 'him': 69,\n",
-       " 'game': 7,\n",
-       " 'eat': 2,\n",
-       " 'pig': 62,\n",
-       " 'say': 35,\n",
-       " 'under': 36,\n",
-       " 'first': 50,\n",
-       " 'grass': 67,\n",
-       " 'same': 49,\n",
-       " 'deer': 40,\n",
-       " 'little': 40,\n",
-       " 'garden': 35,\n",
-       " 'room': 50,\n",
-       " 'window': 38,\n",
-       " 'boy': 35,\n",
-       " 'lamp': 11,\n",
-       " 'bathroom': 11,\n",
-       " 'moose': 1,\n",
-       " 'door': 4,\n",
-       " 'bed': 6,\n",
-       " 'house': 5,\n",
-       " 'basement': 5,\n",
-       " 'teacher': 15,\n",
-       " 'street': 5,\n",
-       " 'empty': 9,\n",
-       " 'kitchen': 34,\n",
-       " 'girl': 22,\n",
-       " 'sheep': 31,\n",
-       " 'cow': 62,\n",
-       " 'bird': 64,\n",
-       " 'rain': 63,\n",
-       " 'man': 22,\n",
-       " 'camera': 45,\n",
-       " 'pool': 13,\n",
-       " 'elephant': 63,\n",
-       " 'her': 32,\n",
-       " 'sofa': 4,\n",
-       " 'shower': 3,\n",
-       " 'garage': 1,\n",
-       " 'child': 26,\n",
-       " 'person': 5,\n",
-       " 'sister': 11,\n",
-       " 'friend': 37,\n",
-       " 'happy': 15,\n",
-       " 'knife': 8,\n",
-       " 'touch': 1,\n",
-       " 'flower': 107,\n",
-       " 'bedroom': 82,\n",
-       " 'home': 11,\n",
-       " 'roof': 22,\n",
-       " 'wait': 20,\n",
-       " 'food': 11,\n",
-       " 'wolf': 146,\n",
-       " 'bear': 77,\n",
-       " 'before': 41,\n",
-       " 'drive': 1,\n",
-       " 'lion': 4,\n",
-       " 'brother': 13,\n",
-       " 'people': 28,\n",
-       " 'head': 5,\n",
-       " 'big': 25,\n",
-       " 'mouse': 62,\n",
-       " 'hand': 38,\n",
-       " 'tiger': 136,\n",
-       " 'close': 40,\n",
-       " 'puppy': 50,\n",
-       " 'bring': 34,\n",
-       " 'up': 54,\n",
-       " 'cereal': 20,\n",
-       " 'play': 23,\n",
-       " 'stand': 2,\n",
-       " 'coffee': 36,\n",
-       " 'park': 1,\n",
-       " 'hair': 12,\n",
-       " 'how': 60,\n",
-       " 'after': 25,\n",
-       " 'face': 4,\n",
-       " 'corn': 8,\n",
-       " 'toy': 44,\n",
-       " 'squirrel': 103,\n",
-       " 'put': 72,\n",
-       " 'new': 22,\n",
-       " 'good': 53,\n",
-       " 'much': 60,\n",
-       " 'bunny': 98,\n",
-       " 'cup': 1,\n",
-       " 'inside': 31,\n",
-       " 'bat': 26,\n",
-       " 'glass': 8,\n",
-       " 'picture': 40,\n",
-       " 'off': 33,\n",
-       " 'not': 57,\n",
-       " 'finger': 19,\n",
-       " 'plant': 77,\n",
-       " 'fast': 6,\n",
-       " 'flag': 129,\n",
-       " 'doll': 9,\n",
-       " 'paper': 17,\n",
-       " 'airplane': 141,\n",
-       " 'make': 56,\n",
-       " 'bottle': 43,\n",
-       " 'coat': 21,\n",
-       " 'out': 80,\n",
-       " 'truck': 91,\n",
-       " 'ant': 16,\n",
-       " 'around': 36,\n",
-       " 'circus': 46,\n",
-       " 'stick': 19,\n",
-       " 'block': 21,\n",
-       " 'lunch': 11,\n",
-       " 'because': 59,\n",
-       " 'beach': 59,\n",
-       " 'car': 73,\n",
-       " 'rooster': 88,\n",
-       " 'boat': 50,\n",
-       " 'another': 43,\n",
-       " 'jacket': 6,\n",
-       " 'bus': 21,\n",
-       " 'ball': 6,\n",
-       " 'box': 5,\n",
-       " 'bicycle': 21,\n",
-       " 'dress': 116,\n",
-       " 'tractor': 82,\n",
-       " 'cut': 5,\n",
-       " 'hit': 2,\n",
-       " 'clock': 93,\n",
-       " 'chalk': 3,\n",
-       " 'motorcycle': 52,\n",
-       " 'better': 63,\n",
-       " 'have': 52,\n",
-       " 'zebra': 93,\n",
-       " 'tuna': 6,\n",
-       " 'clown': 96,\n",
-       " 'couch': 30,\n",
-       " 'closet': 2,\n",
-       " 'hold': 16,\n",
-       " 'throw': 2,\n",
-       " 'sweater': 3,\n",
-       " 'kick': 1,\n",
-       " 'catch': 8,\n",
-       " 'basket': 1,\n",
-       " 'carry': 3,\n",
-       " 'train': 46,\n",
-       " 'shirt': 39,\n",
-       " 'table': 6,\n",
-       " 'drop': 7,\n",
-       " 'pony': 74,\n",
-       " 'with': 34,\n",
-       " 'farm': 6,\n",
-       " 'hammer': 38,\n",
-       " 'take': 69,\n",
-       " 'old': 26,\n",
-       " 'dance': 26,\n",
-       " 'other': 35,\n",
-       " 'helicopter': 108,\n",
-       " 'what': 50,\n",
-       " 'police': 39,\n",
-       " 'scarf': 1,\n",
-       " 'wind': 37,\n",
-       " 'all': 82,\n",
-       " 'will': 50,\n",
-       " 'now': 67,\n",
-       " 'porch': 2,\n",
-       " 'ride': 14,\n",
-       " 'popcorn': 7,\n",
-       " 'bucket': 6,\n",
-       " 'moon': 122,\n",
-       " 'towel': 3,\n",
-       " 'butterfly': 75,\n",
-       " 'bad': 39,\n",
-       " 'cute': 51,\n",
-       " 'behind': 19,\n",
-       " 'nice': 13,\n",
-       " 'over': 50,\n",
-       " 'full': 23,\n",
-       " 'spaghetti': 6,\n",
-       " 'dirty': 4,\n",
-       " 'doctor': 9,\n",
-       " 'be': 61,\n",
-       " 'wish': 11,\n",
-       " 'climb': 7,\n",
-       " 'bee': 37,\n",
-       " 'kiss': 36,\n",
-       " 'egg': 22,\n",
-       " 'uncle': 12,\n",
-       " 'today': 59,\n",
-       " 'jump': 17,\n",
-       " 'some': 53,\n",
-       " 'none': 25,\n",
-       " 'downtown': 26,\n",
-       " 'there': 54,\n",
-       " 'day': 48,\n",
-       " 'cover': 6,\n",
-       " 'pretty': 10,\n",
-       " 'chair': 99,\n",
-       " 'more': 64,\n",
-       " 'ladder': 4,\n",
-       " 'high': 27,\n",
-       " 'nurse': 13,\n",
-       " 'nail': 26,\n",
-       " 'hard': 24,\n",
-       " 'cloud': 62,\n",
-       " 'ear': 7,\n",
-       " 'no': 46,\n",
-       " 'outside': 16,\n",
-       " 'necklace': 118,\n",
-       " 'book': 3,\n",
-       " 'penguin': 121,\n",
-       " 'bowl': 2,\n",
-       " 'fine': 38,\n",
-       " 'bug': 11,\n",
-       " 'smile': 65,\n",
-       " 'button': 114,\n",
-       " 'tape': 7,\n",
-       " 'pick': 2,\n",
-       " 'banana': 51,\n",
-       " 'read': 2,\n",
-       " 'story': 2,\n",
-       " 'pen': 1,\n",
-       " 'broom': 3,\n",
-       " 'soft': 1,\n",
-       " 'pencil': 24,\n",
-       " 'school': 33,\n",
-       " 'purse': 5,\n",
-       " 'yard': 4,\n",
-       " 'show': 13,\n",
-       " 'lady': 32,\n",
-       " 'medicine': 1,\n",
-       " 'slow': 19,\n",
-       " 'apple': 60,\n",
-       " 'buy': 39,\n",
-       " 'tooth': 3,\n",
-       " 'tiny': 16,\n",
-       " 'finish': 33,\n",
-       " 'mad': 2,\n",
-       " 'playground': 18,\n",
-       " 'write': 1,\n",
-       " 'movie': 2,\n",
-       " 'strawberry': 25,\n",
-       " 'mouth': 21,\n",
-       " 'pretend': 1,\n",
-       " 'telephone': 19,\n",
-       " 'hurry': 1,\n",
-       " 'drawer': 21,\n",
-       " 'eye': 102,\n",
-       " 'bath': 4,\n",
-       " 'please': 18,\n",
-       " 'heavy': 4,\n",
-       " 'skate': 38,\n",
-       " 'zipper': 10,\n",
-       " 'puzzle': 41,\n",
-       " 'hurt': 10,\n",
-       " 'present': 37,\n",
-       " 'sink': 6,\n",
-       " 'tomorrow': 5,\n",
-       " 'careful': 48,\n",
-       " 'tongue': 2,\n",
-       " 'vacuum': 6,\n",
-       " 'sad': 88,\n",
-       " 'rock': 18,\n",
-       " 'above': 1,\n",
-       " 'dump': 4,\n",
-       " 'oven': 28,\n",
-       " 'sick': 4,\n",
-       " 'hear': 5,\n",
-       " 'yesterday': 5,\n",
-       " 'splash': 1,\n",
-       " 'wake': 5,\n",
-       " 'trash': 5,\n",
-       " 'on': 40,\n",
-       " 'stay': 13,\n",
-       " 'look': 33,\n",
-       " 'spill': 5,\n",
-       " 'when': 43,\n",
-       " 'tray': 5,\n",
-       " 'share': 8,\n",
-       " 'listen': 2,\n",
-       " 'cheek': 2,\n",
-       " 'garbage': 3,\n",
-       " 'paint': 2,\n",
-       " 'hate': 6,\n",
-       " 'talk': 11,\n",
-       " 'for': 37,\n",
-       " 'salt': 5,\n",
-       " 'tonight': 34,\n",
-       " 'church': 11,\n",
-       " 'comb': 1,\n",
-       " 'hen': 3,\n",
-       " 'bump': 4,\n",
-       " 'cowboy': 55,\n",
-       " 'poor': 20,\n",
-       " 'aunt': 10,\n",
-       " 'fix': 25,\n",
-       " 'sweep': 1,\n",
-       " 'store': 26,\n",
-       " 'tissue': 7,\n",
-       " 'glue': 1,\n",
-       " 'a': 22,\n",
-       " 'shovel': 3,\n",
-       " 'party': 5,\n",
-       " 'draw': 2,\n",
-       " 'shake': 6,\n",
-       " 'wash': 5,\n",
-       " 'plate': 6,\n",
-       " 'mine': 42,\n",
-       " 'ankle': 18,\n",
-       " 'hide': 12,\n",
-       " 'refrigerator': 7,\n",
-       " 'brush': 2,\n",
-       " 'see': 41,\n",
-       " 'gentle': 6,\n",
-       " 'tear': 8,\n",
-       " 'knee': 4,\n",
-       " 'grandpa': 17,\n",
-       " 'cook': 0,\n",
-       " 'rip': 0,\n",
-       " 'leg': 2,\n",
-       " 'shoulder': 3,\n",
-       " 'grandma': 1,\n",
-       " 'pour': 1,\n",
-       " 'radio': 0,\n",
-       " 'quiet': 0,\n",
-       " 'cry': 0,\n",
-       " 'taste': 0,\n",
-       " 'pillow': 0,\n",
-       " 'sidewalk': 0,\n",
-       " 'belt': 0,\n",
-       " 'arm': 0,\n",
-       " 'gum': 0,\n",
-       " 'jar': 0,\n",
-       " 'stone': 0,\n",
-       " 'zoo': 0,\n",
-       " 'wipe': 0,\n",
-       " 'hungry': 1,\n",
-       " 'noisy': 0,\n",
-       " 'sing': 0,\n",
-       " 'thirsty': 1,\n",
-       " 'nose': 1,\n",
-       " 'chase': 0,\n",
-       " 'bye': 0,\n",
-       " 'penny': 0,\n",
-       " 'lick': 0,\n",
-       " 'loud': 0,\n",
-       " 'bite': 0,\n",
-       " 'hose': 0,\n",
-       " 'toe': 0,\n",
-       " 'bench': 0,\n",
-       " 'blow': 0,\n",
-       " 'soap': 0,\n",
-       " 'picnic': 0,\n",
-       " 'hug': 0,\n",
-       " 'napkin': 0,\n",
-       " 'sticky': 0,\n",
-       " 'blanket': 0,\n",
-       " 'knock': 0,\n",
-       " 'sleepy': 0}"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'yes': 5, 'water': 15, 'wet': 2, 'spoon': 32, 'mommy': 27, 'nap': 2, 'fork': 32, 'ice': 1, 'cheese': 71, 'chocolate': 74, 'sleep': 28, 'daddy': 11, 'butter': 16, 'hot': 2, 'me': 32, 'you': 52, 'balloon': 111, 'blue': 98, 'why': 44, 'sun': 124, 'asleep': 3, 'think': 39, 'swim': 8, 'cat': 110, 'turtle': 83, 'do': 42, 'red': 5, 'animal': 28, 'dark': 10, 'potato': 12, 'bread': 11, 'alligator': 6, 'candy': 15, 'pizza': 4, 'toast': 10, 'kitty': 11, 'snack': 20, 'morning': 10, 'jelly': 14, 'sky': 36, 'awake': 9, 'get': 69, 'sauce': 12, 'vanilla': 2, 'like': 51, 'go': 67, 'run': 7, 'pumpkin': 2, 'away': 45, 'cake': 47, 'night': 35, 'money': 4, 'where': 58, 'stop': 7, 'green': 42, 'white': 29, 'time': 61, 'sit': 6, 'sandwich': 10, 'back': 39, 'break': 29, 'owl': 7, 'pudding': 6, 'here': 64, 'dog': 78, 'soup': 9, 'brown': 3, 'baby': 9, 'fall': 9, 'last': 48, 'open': 4, 'try': 28, 'cookie': 9, 'long': 16, 'country': 10, 'down': 27, 'dish': 1, 'breakfast': 13, 'black': 92, 'give': 40, 'yellow': 93, 'duck': 25, 'walk': 2, 'meat': 13, 'need': 48, 'cold': 5, 'dinner': 2, 'goose': 9, 'light': 98, 'find': 50, 'milk': 26, 'help': 60, 'she': 33, 'hamburger': 16, 'push': 7, 'juice': 4, 'love': 31, 'pull': 9, 'tree': 82, 'he': 48, 'horse': 93, 'star': 26, 'hat': 38, 'soda': 10, 'frog': 43, 'lamb': 11, 'coke': 3, 'build': 6, 'who': 10, 'snow': 17, 'him': 69, 'game': 7, 'eat': 2, 'pig': 62, 'say': 35, 'under': 36, 'first': 50, 'grass': 67, 'same': 49, 'deer': 40, 'little': 40, 'garden': 35, 'room': 50, 'window': 38, 'boy': 35, 'lamp': 11, 'bathroom': 11, 'moose': 1, 'door': 4, 'bed': 6, 'house': 5, 'basement': 5, 'teacher': 15, 'street': 5, 'empty': 9, 'kitchen': 34, 'girl': 22, 'sheep': 31, 'cow': 62, 'bird': 64, 'rain': 63, 'man': 22, 'camera': 45, 'pool': 13, 'elephant': 63, 'her': 32, 'sofa': 4, 'shower': 3, 'garage': 1, 'child': 26, 'person': 5, 'sister': 11, 'friend': 37, 'happy': 15, 'knife': 8, 'touch': 1, 'flower': 107, 'bedroom': 82, 'home': 11, 'roof': 22, 'wait': 20, 'food': 11, 'wolf': 146, 'bear': 77, 'before': 41, 'drive': 1, 'lion': 4, 'brother': 13, 'people': 28, 'head': 5, 'big': 25, 'mouse': 62, 'hand': 38, 'tiger': 136, 'close': 40, 'puppy': 50, 'bring': 34, 'up': 54, 'cereal': 20, 'play': 23, 'stand': 2, 'coffee': 36, 'park': 1, 'hair': 12, 'how': 60, 'after': 25, 'face': 4, 'corn': 8, 'toy': 44, 'squirrel': 103, 'put': 72, 'new': 22, 'good': 53, 'much': 60, 'bunny': 98, 'cup': 1, 'inside': 31, 'bat': 26, 'glass': 8, 'picture': 40, 'off': 33, 'not': 57, 'finger': 19, 'plant': 77, 'fast': 6, 'flag': 129, 'doll': 9, 'paper': 17, 'airplane': 141, 'make': 56, 'bottle': 43, 'coat': 21, 'out': 80, 'truck': 91, 'ant': 16, 'around': 36, 'circus': 46, 'stick': 19, 'block': 21, 'lunch': 11, 'because': 59, 'beach': 59, 'car': 73, 'rooster': 88, 'boat': 50, 'another': 43, 'jacket': 6, 'bus': 21, 'ball': 6, 'box': 5, 'bicycle': 21, 'dress': 116, 'tractor': 82, 'cut': 5, 'hit': 2, 'clock': 93, 'chalk': 3, 'motorcycle': 52, 'better': 63, 'have': 52, 'zebra': 93, 'tuna': 6, 'clown': 96, 'couch': 30, 'closet': 2, 'hold': 16, 'throw': 2, 'sweater': 3, 'kick': 1, 'catch': 8, 'basket': 1, 'carry': 3, 'train': 46, 'shirt': 39, 'table': 6, 'drop': 7, 'pony': 74, 'with': 34, 'farm': 6, 'hammer': 38, 'take': 69, 'old': 26, 'dance': 26, 'other': 35, 'helicopter': 108, 'what': 50, 'police': 39, 'scarf': 1, 'wind': 37, 'all': 82, 'will': 50, 'now': 67, 'porch': 2, 'ride': 14, 'popcorn': 7, 'bucket': 6, 'moon': 122, 'towel': 3, 'butterfly': 75, 'bad': 39, 'cute': 51, 'behind': 19, 'nice': 13, 'over': 50, 'full': 23, 'spaghetti': 6, 'dirty': 4, 'doctor': 9, 'be': 61, 'wish': 11, 'climb': 7, 'bee': 37, 'kiss': 36, 'egg': 22, 'uncle': 12, 'today': 59, 'jump': 17, 'some': 53, 'none': 25, 'downtown': 26, 'there': 54, 'day': 48, 'cover': 6, 'pretty': 10, 'chair': 99, 'more': 64, 'ladder': 4, 'high': 27, 'nurse': 13, 'nail': 26, 'hard': 24, 'cloud': 62, 'ear': 7, 'no': 46, 'outside': 16, 'necklace': 118, 'book': 3, 'penguin': 121, 'bowl': 2, 'fine': 38, 'bug': 11, 'smile': 65, 'button': 114, 'tape': 7, 'pick': 2, 'banana': 51, 'read': 2, 'story': 2, 'pen': 1, 'broom': 3, 'soft': 1, 'pencil': 24, 'school': 33, 'purse': 5, 'yard': 4, 'show': 13, 'lady': 32, 'medicine': 1, 'slow': 19, 'apple': 60, 'buy': 39, 'tooth': 3, 'tiny': 16, 'finish': 33, 'mad': 2, 'playground': 18, 'write': 1, 'movie': 2, 'strawberry': 25, 'mouth': 21, 'pretend': 1, 'telephone': 19, 'hurry': 1, 'drawer': 21, 'eye': 102, 'bath': 4, 'please': 18, 'heavy': 4, 'skate': 38, 'zipper': 10, 'puzzle': 41, 'hurt': 10, 'present': 37, 'sink': 6, 'tomorrow': 5, 'careful': 48, 'tongue': 2, 'vacuum': 6, 'sad': 88, 'rock': 18, 'above': 1, 'dump': 4, 'oven': 28, 'sick': 4, 'hear': 5, 'yesterday': 5, 'splash': 1, 'wake': 5, 'trash': 5, 'on': 40, 'stay': 13, 'look': 33, 'spill': 5, 'when': 43, 'tray': 5, 'share': 8, 'listen': 2, 'cheek': 2, 'garbage': 3, 'paint': 2, 'hate': 6, 'talk': 11, 'for': 37, 'salt': 5, 'tonight': 34, 'church': 11, 'comb': 1, 'hen': 3, 'bump': 4, 'cowboy': 55, 'poor': 20, 'aunt': 10, 'fix': 25, 'sweep': 1, 'store': 26, 'tissue': 7, 'glue': 1, 'a': 22, 'shovel': 3, 'party': 5, 'draw': 2, 'shake': 6, 'wash': 5, 'plate': 6, 'mine': 42, 'ankle': 18, 'hide': 12, 'refrigerator': 7, 'brush': 2, 'see': 41, 'gentle': 6, 'tear': 8, 'knee': 4, 'grandpa': 17, 'cook': 0, 'rip': 0, 'leg': 2, 'shoulder': 3, 'grandma': 1, 'pour': 1, 'radio': 0, 'quiet': 0, 'cry': 0, 'taste': 0, 'pillow': 0, 'sidewalk': 0, 'belt': 0, 'arm': 0, 'gum': 0, 'jar': 0, 'stone': 0, 'zoo': 0, 'wipe': 0, 'hungry': 1, 'noisy': 0, 'sing': 0, 'thirsty': 1, 'nose': 1, 'chase': 0, 'bye': 0, 'penny': 0, 'lick': 0, 'loud': 0, 'bite': 0, 'hose': 0, 'toe': 0, 'bench': 0, 'blow': 0, 'soap': 0, 'picnic': 0, 'hug': 0, 'napkin': 0, 'sticky': 0, 'blanket': 0, 'knock': 0, 'sleepy': 0}\n"
+     ]
     }
    ],
    "source": [
-    "degree_dict "
+    "a_file = open(\"network_degrees.pkl\", \"rb\")\n",
+    "output = pickle.load(a_file)\n",
+    "print(output)"
    ]
   },
   {
