Changed test cases names

--- a/src/heatmaps.ipynb
+++ b/src/heatmaps.ipynb
@@ -101,14 +101,14 @@
    "source": [
     "# create a dictionary with data for each heat map\n",
     "data_dict = {}\n",
-    "data_dict['test_name'] = ['pref attach (4)', 'pref acquis (4)',\n",
+    "data_dict['test_name'] = ['att (4)', 'acqu (4)',\n",
     "                          \n",
-    "                          'pref attach (3)(.7)','pref attach (3)(.8)',\n",
-    "                          'pref acquis (3)(.7)', 'pref acquis (3)(.8)',\n",
+    "                          'att (3)(.7)','att (3)(.8)',\n",
+    "                          'acqu (3)(.7)', 'acqu (3)(.8)',\n",
     "                          \n",
-    "                          'pref attach (7)(.7)','pref attach (7)(.8)',\n",
+    "                          'att (7)(.7)','att (7)(.8)',\n",
     "                             \n",
-    "                          'pref acquis (7)(.7)', 'pref acquis (7)(.8)' ]\n",
+    "                          'acqu (7)(.7)', 'acqu (7)(.8)' ]\n",
     "\n",
     "cosine_dict = {}\n",
     "cosine_dict['test_name']= ['cosine (3)(.7)', 'cosine (3)(.8)','cosine (visual)(.7)', 'cosine (visual)(.8)']\n",
